--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,35 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="material_button">Material Button</string>
+    <string name="toggle_buttons">Toggle Buttons</string>
+    <string name="chips">Chips</string>
+    <string name="checkable">checkable</string>
+    <string name="strok">Strok</string>
+    <string name="corner_radius">Corner Radius</string>
+    <string name="chip_icon">Chip Icon</string>
+
+    <string name="switches">Switch</string>
+    <string name="text_input_layout">Text Input Layout</string>
+    <string name="enter_text">enter text</string>
+    <string name="check_box">Check box</string>
+    <string name="simple_dialog">simple dialog</string>
+    <string name="single_choice_dialog">Single choice dialog</string>
+    <string name="multi_choice_dialog">Multi Choice Dialog</string>
+    <string name="progress_dialog">Progress Dialog</string>
+    <string name="date_picker_dialog">Date Picker Dialog</string>
+    <string name="time_picker_dialog">Time Picker Dialog</string>
+    <string name="bottom_dialog">Bottom Dialog</string>
+    <string name="okay">OKAY</string>
+    <string name="list_items">List Items</string>
+    <string name="widgets">Widgets</string>
+    <string name="recycler_items">Recycler Items</string>
+    <string name="dialogs">Dialogs</string>
+    <string name="cancel_button">Cancel button</string>
+    <string name="rename_file">Rename File</string>
+    <string name="save">Save</string>
+    <string name="enter_file_name">Enter File Name</string>
+    <string name="file_name">File Name</string>
 </resources>
