--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,9 @@
     <string name="save">Save</string>
     <string name="enter_file_name">Enter File Name</string>
     <string name="file_name">File Name</string>
+    <string name="close_icon">Close Icon</string>
+    <string name="radio_group">Radio Group</string>
+    <string name="item1">item1</string>
+    <string name="item2">item2</string>
+    <string name="item3">item3</string>
 </resources>
