--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,9 @@
     <string name="item1">item1</string>
     <string name="item2">item2</string>
     <string name="item3">item3</string>
+    <string name="version">Version</string>
+    <string name="version_name">Version name...</string>
+    <string name="add">ADD</string>
+    <string name="minimum_sdk">Minimum SDK</string>
+    <string name="description">Description...</string>
 </resources>
