--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,5 +78,10 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="send">send</string>
+    <string name="chats">Chats</string>
+    <string name="status">Status</string>
+    <string name="call">Call</string>
+    <string name="title_vp">ViewPager Activity</string>
+    <string name="title_vp_with_tl">ViewPager TabLayout</string>
 
 </resources>
