Firebase push notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,5 +105,6 @@
     <string name="dogs_activity">Dogs Activity</string>
     <string name="dogs_activity_breed">Breed and Image</string>
     <string name="dogs_activity_auto">Reload Breed</string>
+    <string name="default_notification_channel_id">com.icg.training</string>
 
 </resources>
